--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/stephenliu8964/sit725-2023-t2-prac2#readme",
   "dependencies": {
     "chai": "^4.3.7",
-    "http": "^0.0.1-security",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "http": "^0.0.1-security",
     "mocha": "^10.2.0",
     "mongodb": "^4.4.1",
     "nodemon": "^3.0.1",
     "request": "^2.88.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^10.0.0"
   }
 }
