--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http": "^0.0.1-security",
     "mocha": "^10.2.0",
     "mongodb": "^4.17.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
