--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "chai": "^4.3.7",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "handlebars": "^4.7.8",
     "http": "^0.0.1-security",
     "mocha": "^10.2.0",
     "mongodb": "^4.17.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.0.1",
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
